# bexec

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md
.github/workflows/: ci.yml
cmake/: bexec.pc.in  bexecConfig.cmake.in
docs/: design.md  maintenance.md  roadmap.md  usage.md
docs/usage/: algorithms.md  basic-sender-receiver.md  completion-adaptors.md  concepts-and-metadata.md  coroutines.md  counting-scopes.md  environments.md  index.md  let-adaptors.md  scheduling.md  sender-factories.md  stop-tokens.md
examples/: CMakeLists.txt  basic.cpp  completion_adaptors.cpp  coroutine_task.cpp  environment.cpp  example_receiver.hpp  example_senders.hpp  into_variant.cpp  just_then.cpp  let.cpp  repeat_until.cpp  run_loop.cpp  scheduler.cpp  scheduling_adaptors.cpp  split_with_let.cpp  sync_wait.cpp  when_all.cpp
include/bexec/: associate.hpp  awaitable.hpp  bexec.hpp  completion_signatures.hpp  concepts.hpp  counting_scope.hpp  cpo.hpp  env.hpp  generator.hpp  into_variant.hpp  just.hpp  let.hpp  on.hpp  operation_state.hpp  query.hpp  receiver.hpp  repeat_until.hpp  run_loop.hpp  scheduler.hpp  sender.hpp  stop_token.hpp  sync_wait.hpp  task.hpp  then.hpp  when_all.hpp
include/bexec/detail/: associate.hpp  config.hpp  counting_scope.hpp  erased_lifetime.hpp  let.hpp  manual_lifetime.hpp  manual_variant.hpp  operation.hpp  operation_storage.hpp  repeat_until.hpp  schedule_sender.hpp  then.hpp  type_traits.hpp  when_all.hpp
include/bexec/io_context/: io_context.hpp
include/bexec/io_context/detail/: schedule_sender.hpp
scripts/: coverage_summary.py  format.sh
tests/: CMakeLists.txt  choice_sender.hpp  receiver_scheduler_sender.hpp  test_bexec.cpp  test_completion_signatures.cpp  test_concepts.cpp  test_counting_scope.cpp  test_env.cpp  test_just.cpp  test_let.cpp  test_main.cpp  test_repeat_until.cpp  test_runner.cpp  test_scheduler.cpp  test_stop_token.cpp  test_support.cpp  test_support.hpp  test_task.cpp  test_then.cpp  test_when_all.cpp
tests/basic/: completion_signatures.cpp  concepts.cpp  counting_scope.cpp  env.cpp  generator.cpp  into_variant.cpp  just.cpp  let.cpp  on.cpp  repeat_until.cpp  run_loop.cpp  stop_token.cpp  sync_wait.cpp  task.cpp  then.cpp  when_all.cpp
tests/integration/: counting_scope.cpp  generator.cpp  into_variant.cpp  just.cpp  let.cpp  on.cpp  repeat_until.cpp  run_loop.cpp  stop_token.cpp  sync_wait.cpp  task.cpp  then.cpp  vocabulary.cpp  when_all.cpp
tests/packaging/: consumer.cpp
tests/packaging/cmake/: CMakeLists.txt
tests/packaging/pkgconfig/: CMakeLists.txt
tests/packaging/source/: CMakeLists.txt
tests/stress/: counting_scope.cpp  generator.cpp  into_variant.cpp  just.cpp  let.cpp  on.cpp  repeat_until.cpp  run_loop.cpp  stop_token_races.cpp  sync_wait.cpp  task.cpp  then.cpp  vocabulary.cpp  when_all.cpp
